client/src/components/OuterNav/OuterNav.scss
@import '../../../variables.scss';

  #OuterNav {
    display: flex !important;
    justify-content: center;
    margin: 0;
    z-index: 999999999999999999999999999;
    box-shadow: 0px 10px 10px black(14, 14, 14);
    background-color: #11161A;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    li {
      list-style: none;
      cursor: pointer;
      font-size: 20px;
      a {
        &:hover {
          background-color: $primaryColor;
          color: white;
        }
        transition: .3s;
        padding: 10px 15px;
        text-decoration: none;
        width: 100%;
        height: 100%;
        display: block;
        color: $primaryColor;
      }
    }
  }

